jitfailure-dolfin_expression_808bae87bcfe7102b1a40106d1a93246/error.log
/tmp/tmpd9odr53k/dolfin_expression_808bae87bcfe7102b1a40106d1a93246.cpp: In member function ‘virtual void dolfin::dolfin_expression_808bae87bcfe7102b1a40106d1a93246::eval(Eigen::Ref<Eigen::Matrix<double, -1, 1> >, Eigen::Ref<const Eigen::Matrix<double, -1, 1> >) const’:
/tmp/tmpd9odr53k/dolfin_expression_808bae87bcfe7102b1a40106d1a93246.cpp:63:59: error: no matching function for call to ‘pow(Eigen::DenseCoeffsBase<Eigen::Ref<const Eigen::Matrix<double, -1, 1> >, 0>::CoeffReturnType)’
           values[0] = -2*a*a*a*h*x[0]/(pow(x[0]*x[0] + a*a), 2));
                                                           ^
In file included from /usr/include/features.h:424:0,
                 from /usr/include/x86_64-linux-gnu/c++/7/bits/os_defines.h:39,
                 from /usr/include/x86_64-linux-gnu/c++/7/bits/c++config.h:533,
                 from /usr/include/c++/7/bits/stl_algobase.h:59,
                 from /usr/include/c++/7/vector:60,
                 from /usr/include/dolfin/function/Expression.h:24,
                 from /tmp/tmpd9odr53k/dolfin_expression_808bae87bcfe7102b1a40106d1a93246.cpp:13:
/usr/include/x86_64-linux-gnu/bits/math-finite.h:156:1: note: candidate: double pow(double, double)
 __MATH_REDIRCALL (pow, , (_Mdouble_, _Mdouble_));
 ^
/usr/include/x86_64-linux-gnu/bits/math-finite.h:156:1: note:   candidate expects 2 arguments, 1 provided
In file included from /usr/include/ufc_geometry.h:9:0,
                 from /usr/include/ufc.h:22,
                 from /usr/include/dolfin/function/Expression.h:25,
                 from /tmp/tmpd9odr53k/dolfin_expression_808bae87bcfe7102b1a40106d1a93246.cpp:13:
/usr/include/c++/7/cmath:388:3: note: candidate: constexpr float std::pow(float, float)
   pow(float __x, float __y)
   ^~~
/usr/include/c++/7/cmath:388:3: note:   candidate expects 2 arguments, 1 provided
/usr/include/c++/7/cmath:392:3: note: candidate: constexpr long double std::pow(long double, long double)
   pow(long double __x, long double __y)
   ^~~
/usr/include/c++/7/cmath:392:3: note:   candidate expects 2 arguments, 1 provided
/usr/include/c++/7/cmath:415:5: note: candidate: template<class _Tp, class _Up> constexpr typename __gnu_cxx::__promote_2<_Tp, _Up>::__type std::pow(_Tp, _Up)
     pow(_Tp __x, _Up __y)
     ^~~
/usr/include/c++/7/cmath:415:5: note:   template argument deduction/substitution failed:
/tmp/tmpd9odr53k/dolfin_expression_808bae87bcfe7102b1a40106d1a93246.cpp:63:59: note:   candidate expects 2 arguments, 1 provided
           values[0] = -2*a*a*a*h*x[0]/(pow(x[0]*x[0] + a*a), 2));
                                                           ^
In file included from /usr/include/eigen3/Eigen/Core:80:0,
                 from /usr/include/eigen3/Eigen/Dense:1,
                 from /usr/include/dolfin/function/Expression.h:26,
                 from /tmp/tmpd9odr53k/dolfin_expression_808bae87bcfe7102b1a40106d1a93246.cpp:13:
/usr/include/c++/7/complex:989:5: note: candidate: template<class _Tp> std::complex<_Tp> std::pow(const std::complex<_Tp>&, int)
     pow(const complex<_Tp>& __z, int __n)
     ^~~
/usr/include/c++/7/complex:989:5: note:   template argument deduction/substitution failed:
/tmp/tmpd9odr53k/dolfin_expression_808bae87bcfe7102b1a40106d1a93246.cpp:63:59: note:   mismatched types ‘const std::complex<_Tp>’ and ‘Eigen::DenseCoeffsBase<Eigen::Ref<const Eigen::Matrix<double, -1, 1> >, 0>::CoeffReturnType {aka double}’
           values[0] = -2*a*a*a*h*x[0]/(pow(x[0]*x[0] + a*a), 2));
                                                           ^
In file included from /usr/include/eigen3/Eigen/Core:80:0,
                 from /usr/include/eigen3/Eigen/Dense:1,
                 from /usr/include/dolfin/function/Expression.h:26,
                 from /tmp/tmpd9odr53k/dolfin_expression_808bae87bcfe7102b1a40106d1a93246.cpp:13:
/usr/include/c++/7/complex:998:5: note: candidate: template<class _Tp> std::complex<_Tp> std::pow(const std::complex<_Tp>&, const _Tp&)
     pow(const complex<_Tp>& __x, const _Tp& __y)
     ^~~
/usr/include/c++/7/complex:998:5: note:   template argument deduction/substitution failed:
/tmp/tmpd9odr53k/dolfin_expression_808bae87bcfe7102b1a40106d1a93246.cpp:63:59: note:   mismatched types ‘const std::complex<_Tp>’ and ‘Eigen::DenseCoeffsBase<Eigen::Ref<const Eigen::Matrix<double, -1, 1> >, 0>::CoeffReturnType {aka double}’
           values[0] = -2*a*a*a*h*x[0]/(pow(x[0]*x[0] + a*a), 2));
                                                           ^
In file included from /usr/include/eigen3/Eigen/Core:80:0,
                 from /usr/include/eigen3/Eigen/Dense:1,
                 from /usr/include/dolfin/function/Expression.h:26,
                 from /tmp/tmpd9odr53k/dolfin_expression_808bae87bcfe7102b1a40106d1a93246.cpp:13:
/usr/include/c++/7/complex:1032:5: note: candidate: template<class _Tp> std::complex<_Tp> std::pow(const std::complex<_Tp>&, const std::complex<_Tp>&)
     pow(const complex<_Tp>& __x, const complex<_Tp>& __y)
     ^~~
/usr/include/c++/7/complex:1032:5: note:   template argument deduction/substitution failed:
/tmp/tmpd9odr53k/dolfin_expression_808bae87bcfe7102b1a40106d1a93246.cpp:63:59: note:   mismatched types ‘const std::complex<_Tp>’ and ‘Eigen::DenseCoeffsBase<Eigen::Ref<const Eigen::Matrix<double, -1, 1> >, 0>::CoeffReturnType {aka double}’
           values[0] = -2*a*a*a*h*x[0]/(pow(x[0]*x[0] + a*a), 2));
                                                           ^
In file included from /usr/include/eigen3/Eigen/Core:80:0,
                 from /usr/include/eigen3/Eigen/Dense:1,
                 from /usr/include/dolfin/function/Expression.h:26,
                 from /tmp/tmpd9odr53k/dolfin_expression_808bae87bcfe7102b1a40106d1a93246.cpp:13:
/usr/include/c++/7/complex:1043:5: note: candidate: template<class _Tp> std::complex<_Tp> std::pow(const _Tp&, const std::complex<_Tp>&)
     pow(const _Tp& __x, const complex<_Tp>& __y)
     ^~~
/usr/include/c++/7/complex:1043:5: note:   template argument deduction/substitution failed:
/tmp/tmpd9odr53k/dolfin_expression_808bae87bcfe7102b1a40106d1a93246.cpp:63:59: note:   candidate expects 2 arguments, 1 provided
           values[0] = -2*a*a*a*h*x[0]/(pow(x[0]*x[0] + a*a), 2));
                                                           ^
In file included from /usr/include/eigen3/Eigen/Core:80:0,
                 from /usr/include/eigen3/Eigen/Dense:1,
                 from /usr/include/dolfin/function/Expression.h:26,
                 from /tmp/tmpd9odr53k/dolfin_expression_808bae87bcfe7102b1a40106d1a93246.cpp:13:
/usr/include/c++/7/complex:1864:5: note: candidate: template<class _Tp, class _Up> std::complex<typename __gnu_cxx::__promote_2<_Tp, _Up>::__type> std::pow(const std::complex<_Tp>&, const _Up&)
     pow(const std::complex<_Tp>& __x, const _Up& __y)
     ^~~
/usr/include/c++/7/complex:1864:5: note:   template argument deduction/substitution failed:
/tmp/tmpd9odr53k/dolfin_expression_808bae87bcfe7102b1a40106d1a93246.cpp:63:59: note:   mismatched types ‘const std::complex<_Tp>’ and ‘Eigen::DenseCoeffsBase<Eigen::Ref<const Eigen::Matrix<double, -1, 1> >, 0>::CoeffReturnType {aka double}’
           values[0] = -2*a*a*a*h*x[0]/(pow(x[0]*x[0] + a*a), 2));
                                                           ^
In file included from /usr/include/eigen3/Eigen/Core:80:0,
                 from /usr/include/eigen3/Eigen/Dense:1,
                 from /usr/include/dolfin/function/Expression.h:26,
                 from /tmp/tmpd9odr53k/dolfin_expression_808bae87bcfe7102b1a40106d1a93246.cpp:13:
/usr/include/c++/7/complex:1872:5: note: candidate: template<class _Tp, class _Up> std::complex<typename __gnu_cxx::__promote_2<_Tp, _Up>::__type> std::pow(const _Tp&, const std::complex<_Up>&)
     pow(const _Tp& __x, const std::complex<_Up>& __y)
     ^~~
/usr/include/c++/7/complex:1872:5: note:   template argument deduction/substitution failed:
/tmp/tmpd9odr53k/dolfin_expression_808bae87bcfe7102b1a40106d1a93246.cpp:63:59: note:   candidate expects 2 arguments, 1 provided
           values[0] = -2*a*a*a*h*x[0]/(pow(x[0]*x[0] + a*a), 2));
                                                           ^
In file included from /usr/include/eigen3/Eigen/Core:80:0,
                 from /usr/include/eigen3/Eigen/Dense:1,
                 from /usr/include/dolfin/function/Expression.h:26,
                 from /tmp/tmpd9odr53k/dolfin_expression_808bae87bcfe7102b1a40106d1a93246.cpp:13:
/usr/include/c++/7/complex:1880:5: note: candidate: template<class _Tp, class _Up> std::complex<typename __gnu_cxx::__promote_2<_Tp, _Up>::__type> std::pow(const std::complex<_Tp>&, const std::complex<_Up>&)
     pow(const std::complex<_Tp>& __x, const std::complex<_Up>& __y)
     ^~~
/usr/include/c++/7/complex:1880:5: note:   template argument deduction/substitution failed:
/tmp/tmpd9odr53k/dolfin_expression_808bae87bcfe7102b1a40106d1a93246.cpp:63:59: note:   mismatched types ‘const std::complex<_Tp>’ and ‘Eigen::DenseCoeffsBase<Eigen::Ref<const Eigen::Matrix<double, -1, 1> >, 0>::CoeffReturnType {aka double}’
           values[0] = -2*a*a*a*h*x[0]/(pow(x[0]*x[0] + a*a), 2));
                                                           ^
/tmp/tmpd9odr53k/dolfin_expression_808bae87bcfe7102b1a40106d1a93246.cpp: In member function ‘virtual double dolfin::dolfin_expression_808bae87bcfe7102b1a40106d1a93246::get_property(std::__cxx11::string) const’:
/tmp/tmpd9odr53k/dolfin_expression_808bae87bcfe7102b1a40106d1a93246.cpp:75:11: warning: this ‘if’ clause does not guard... [-Wmisleading-indentation]
           if (name == "a") return a;          if (name == "h") return h;
           ^~
/tmp/tmpd9odr53k/dolfin_expression_808bae87bcfe7102b1a40106d1a93246.cpp:75:47: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
           if (name == "a") return a;          if (name == "h") return h;
                                               ^~
